# mini-ini

./: .gitignore  CMakeLists.txt  Makefile  README.md  ini_parse.dis.as
examples/: escapes.ini  example.c  noendnl.ini  test1.ini
include/: ini_parse.h
src/: ini_parse.c  ini_parse.rl
